[gd_scene load_steps=2 format=3 uid="uid://75x0uosfoeoi"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_6y8c6"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_6y8c6")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
